--- a/dtas-2/.godot/global_script_class_cache.cfg
+++ b/dtas-2/.godot/global_script_class_cache.cfg
@@ -86,4 +86,12 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://scripts/States/walking_player_state.gd"
+}, {
+"base": &"Resource",
+"class": &"Weapons",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://assets/Models/Weapons/weapons.gd"
 }]
